fixed: group collapse carets shown in printout,
https://github.com/kobotoolbox/enketo-express/issues/876

--- a/src/sass/core/_print.scss
+++ b/src/sass/core/_print.scss
@@ -42,7 +42,8 @@ body {
 .form-footer,
 .or-appearance-no-print,
 .ad,
-.paper #submit-form {
+.paper #submit-form,
+h4::before {
     display: none !important;
 }
 
